# software-engineering-interview

./: .gitignore  README.md
exercises/: README.md
exercises/backend/fastapi/: README.md
exercises/qa/fastapi/: HOW-I-DID-THIS.md  PETER-LOGGIE-NOTES-AND-ANSWERS.md  README.md  docker-compose.yaml  pyproject.toml
exercises/qa/fastapi/app/: crud.py  database.py  main.py  models.py  schemas.py  task_adapter.py
exercises/qa/fastapi/app/performance/: locustfile.py
exercises/qa/fastapi/tests/data/: tasks-seed.sql
exercises/qa/fastapi/tests/e2e/: conftest.py  test_create_validation.py  test_e2e.py  test_get_task.py  test_update_delete_task.py
exercises/qa/fastapi/tests/integration/: conftest.py  test_delete_task.py  test_get_task.py  test_update_task.py  test_validation.py
exercises/qa/fastapi/tests/unit/: test_validation.py
